.metadata/.plugins/org.eclipse.cdt.ui/timer_assi_5.build.log

**** Build of configuration Debug for project timer_assi_5 ****

"C:\\ti\\ccs1281\\ccs\\utils\\bin\\gmake" -k -j 12 all -O 
 
Building file: "../empty.syscfg"
Invoking: SysConfig
"C:/ti/sysconfig_1.22.0/sysconfig_cli.bat" --script "D:/vidyaleap ccs/timer_assi_5/empty.syscfg" -o "." -s "C:/ti/mspm0_sdk_2_03_00_07/.metadata/product.json" --compiler ticlang
Running script...
Validating...
Generating Code (empty.syscfg)...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\device_linker.cmd...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\device.opt...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\device.cmd.genlibs...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\ti_msp_dl_config.c...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\ti_msp_dl_config.h...
Writing D:\vidyaleap ccs\timer_assi_5\Debug\Event.dot...
Finished building: "../empty.syscfg"
 
Building file: "C:/ti/mspm0_sdk_2_03_00_07/source/ti/devices/msp/m0p/startup_system_files/ticlang/startup_mspm0g350x_ticlang.c"
Invoking: Arm Compiler
"C:/ti/ccs1281/ccs/tools/compiler/ti-cgt-armllvm_3.2.2.LTS/bin/tiarmclang.exe" -c @"device.opt"  -march=thumbv6m -mcpu=cortex-m0plus -mfloat-abi=soft -mlittle-endian -mthumb -O2 -I"D:/vidyaleap ccs/timer_assi_5" -I"D:/vidyaleap ccs/timer_assi_5/Debug" -I"C:/ti/mspm0_sdk_2_03_00_07/source/third_party/CMSIS/Core/Include" -I"C:/ti/mspm0_sdk_2_03_00_07/source" -gdwarf-3 -MMD -MP -MF"startup_mspm0g350x_ticlang.d_raw" -MT"startup_mspm0g350x_ticlang.o"  @"./device.opt"  -o"startup_mspm0g350x_ticlang.o" "C:/ti/mspm0_sdk_2_03_00_07/source/ti/devices/msp/m0p/startup_system_files/ticlang/startup_mspm0g350x_ticlang.c"
Finished building: "C:/ti/mspm0_sdk_2_03_00_07/source/ti/devices/msp/m0p/startup_system_files/ticlang/startup_mspm0g350x_ticlang.c"
 
Building file: "../empty.c"
Invoking: Arm Compiler
"C:/ti/ccs1281/ccs/tools/compiler/ti-cgt-armllvm_3.2.2.LTS/bin/tiarmclang.exe" -c @"device.opt"  -march=thumbv6m -mcpu=cortex-m0plus -mfloat-abi=soft -mlittle-endian -mthumb -O2 -I"D:/vidyaleap ccs/timer_assi_5" -I"D:/vidyaleap ccs/timer_assi_5/Debug" -I"C:/ti/mspm0_sdk_2_03_00_07/source/third_party/CMSIS/Core/Include" -I"C:/ti/mspm0_sdk_2_03_00_07/source" -gdwarf-3 -MMD -MP -MF"empty.d_raw" -MT"empty.o"  @"./device.opt"  -o"empty.o" "../empty.c"
subdir_rules.mk:9: recipe for target 'empty.o' failed
../empty.c:24:20: error: use of undeclared identifier 'CAPTURE_0_INST_INT_IRQN'
    NVIC_EnableIRQ(CAPTURE_0_INST_INT_IRQN);
                   ^
../empty.c:35:38: error: use of undeclared identifier 'CAPTURE_0_INST'
            if (!DL_TimerG_isRunning(CAPTURE_0_INST))
                                     ^
../empty.c:38:39: error: use of undeclared identifier 'CAPTURE_0_INST'
                DL_Timer_startCounter(CAPTURE_0_INST);
                                      ^
../empty.c:51:42: error: use of undeclared identifier 'CAPTURE_0_INST'
    switch (DL_Timer_getPendingInterrupt(CAPTURE_0_INST))
                                         ^
../empty.c:54:43: error: use of undeclared identifier 'CAPTURE_0_INST'
            DL_Timer_clearInterruptStatus(CAPTURE_0_INST, DL_TIMER_IIDX_CC0_DN);
                                          ^
../empty.c:56:55: error: use of undeclared identifier 'CAPTURE_0_INST'
            capTime = DL_Timer_getCaptureCompareValue(CAPTURE_0_INST, DL_TIMER_CC_0_INDEX);
                                                      ^
../empty.c:64:43: error: use of undeclared identifier 'CAPTURE_0_INST'
            DL_Timer_clearInterruptStatus(CAPTURE_0_INST, DL_TIMER_IIDX_ZERO);
                                          ^
7 errors generated.
gmake: *** [empty.o] Error 1
Building file: "ti_msp_dl_config.c"
Invoking: Arm Compiler
"C:/ti/ccs1281/ccs/tools/compiler/ti-cgt-armllvm_3.2.2.LTS/bin/tiarmclang.exe" -c @"device.opt"  -march=thumbv6m -mcpu=cortex-m0plus -mfloat-abi=soft -mlittle-endian -mthumb -O2 -I"D:/vidyaleap ccs/timer_assi_5" -I"D:/vidyaleap ccs/timer_assi_5/Debug" -I"C:/ti/mspm0_sdk_2_03_00_07/source/third_party/CMSIS/Core/Include" -I"C:/ti/mspm0_sdk_2_03_00_07/source" -gdwarf-3 -MMD -MP -MF"ti_msp_dl_config.d_raw" -MT"ti_msp_dl_config.o"  @"./device.opt"  -o"ti_msp_dl_config.o" "ti_msp_dl_config.c"
Finished building: "ti_msp_dl_config.c"
 
gmake: Target 'all' not remade because of errors.

**** Build Finished ****
